Fixed list overlaps image (issue #55 thanks to @Iwasntthere)

--- a/css/template.less
+++ b/css/template.less
@@ -40,6 +40,10 @@ nav {
   }
 }
 
+ul, ol {
+  overflow: hidden;
+}
+
 ul.btn-group {
   padding: 0;
 }
